made the package.json work properly

--- a/TangAlbertLab2/package.json
+++ b/TangAlbertLab2/package.json
@@ -4,9 +4,9 @@
   "description": "Package for lab 2, printing shapes",
   "main": "index.js",
   "scripts": {
-  "test": ""
+    "start": "node index.js"
   },
   "author": "Albert Tang",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {}
 }
