--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bluebird": "^3.5.0",
     "fs-extra": "^4.0.2",
+    "mongodb": "^2.2.31",
     "shelljs": "^0.7.8"
   }
 }
