--- a/package.json
+++ b/package.json
@@ -14,5 +14,13 @@
     "fs-extra": "^4.0.2",
     "mongodb": "^2.2.31",
     "shelljs": "^0.7.8"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/numbahs/cs546.git"
+  },
+  "bugs": {
+    "url": "https://github.com/numbahs/cs546/issues"
+  },
+  "homepage": "https://github.com/numbahs/cs546#readme"
 }
