fixed a few semantic things that professor wanted

--- a/lab4/package.json
+++ b/lab4/package.json
@@ -4,6 +4,7 @@
 	"description": "CS-546 lab4 Submission for Albert Tang",
 	"main": "lab4.js",
 	"scripts": {
+		"start": "node app.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
