--- a/lab7/package.json
+++ b/lab7/package.json
@@ -11,8 +11,10 @@
 	"author": "Albert Tang",
 	"license": "ISC",
 	"dependencies": {
+		"body-parser": "^1.18.2",
 		"express": "^4.16.2",
 		"mongodb": "^2.2.33",
+		"morgan": "^1.9.0",
 		"node-uuid": "^1.4.8"
 	}
 }
