--- a/lab8/package.json
+++ b/lab8/package.json
@@ -11,6 +11,8 @@
 	"author": "Albert Tang",
 	"license": "ISC",
 	"dependencies": {
-		"express": "^4.16.2"
+		"express": "^4.16.2",
+		"express-handlebars": "^3.0.0",
+		"morgan": "^1.9.0"
 	}
 }
