--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "testing-aws"]
 	path = testing-aws
 	url = git@github.com:numbahs/testing-aws.git
+[submodule "final-project"]
+	path = final-project
+	url = git@github.com:robherley/cs546-cloud-markdown.git
